@@ -1361,26 +1361,28 @@ BEGIN
     CONTROL         "Mapped",IDC_MAPPED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,101,49,41,10
 END
 
-IDD_OPTGRAPHS DIALOGEX 0, 0, 250, 145
+IDD_OPTGRAPHS DIALOGEX 0, 0, 250, 156
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Graphs"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "CPU Kernel:",IDC_STATIC,7,36,39,8
-    CONTROL         "CPU Kernel",IDC_CPUKERNEL,"PhColorBox",WS_CLIPSIBLINGS,73,34,33,13
-    LTEXT           "CPU User:",IDC_STATIC,7,53,34,8
-    CONTROL         "CPU User",IDC_CPUUSER,"PhColorBox",WS_CLIPSIBLINGS,73,51,33,13
+    LTEXT           "CPU Kernel:",IDC_STATIC,7,48,39,8
+    CONTROL         "CPU Kernel",IDC_CPUKERNEL,"PhColorBox",WS_CLIPSIBLINGS,73,46,33,13
+    LTEXT           "CPU User:",IDC_STATIC,7,65,34,8
+    CONTROL         "CPU User",IDC_CPUUSER,"PhColorBox",WS_CLIPSIBLINGS,73,63,33,13
     CONTROL         "Show text",IDC_SHOWTEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,7,49,10
-    LTEXT           "I/O R+O:",IDC_STATIC,7,70,32,8
-    CONTROL         "I/O R+O",IDC_IORO,"PhColorBox",WS_CLIPSIBLINGS,73,68,33,13
-    LTEXT           "I/O W:",IDC_STATIC,7,86,23,8
-    CONTROL         "I/O W",IDC_IOW,"PhColorBox",WS_CLIPSIBLINGS,73,85,33,13
-    LTEXT           "Private Bytes:",IDC_STATIC,7,103,46,8
-    CONTROL         "Private Bytes",IDC_PRIVATE,"PhColorBox",WS_CLIPSIBLINGS,73,101,33,13
-    LTEXT           "Physical Memory:",IDC_STATIC,7,119,56,8
-    CONTROL         "Physical Memory",IDC_PHYSICAL,"PhColorBox",WS_CLIPSIBLINGS,73,117,33,13
+    LTEXT           "I/O R+O:",IDC_STATIC,7,82,32,8
+    CONTROL         "I/O R+O",IDC_IORO,"PhColorBox",WS_CLIPSIBLINGS,73,80,33,13
+    LTEXT           "I/O W:",IDC_STATIC,7,98,23,8
+    CONTROL         "I/O W",IDC_IOW,"PhColorBox",WS_CLIPSIBLINGS,73,97,33,13
+    LTEXT           "Private Bytes:",IDC_STATIC,7,115,46,8
+    CONTROL         "Private Bytes",IDC_PRIVATE,"PhColorBox",WS_CLIPSIBLINGS,73,113,33,13
+    LTEXT           "Physical Memory:",IDC_STATIC,7,131,56,8
+    CONTROL         "Physical Memory",IDC_PHYSICAL,"PhColorBox",WS_CLIPSIBLINGS,73,129,33,13
     CONTROL         "Use old colors (black background)",IDC_USEOLDCOLORS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,19,123,10
+    CONTROL         "Show Commit Charge instead of Physical Memory in summary view",IDC_SHOWCOMMITINSUMMARY,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,31,227,10
 END
 
 IDD_PLUGINS DIALOGEX 0, 0, 291, 272
@@ -2204,7 +2206,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 243
         TOPMARGIN, 7
-        BOTTOMMARGIN, 138
+        BOTTOMMARGIN, 149
     END
 
     IDD_PLUGINS, DIALOG
